data/derived/comb/progs/unify/prog4321.ml.out
Characters 27-57:
  let fixpoint (f,b) = wwhile(fun b ->  f b, (f b != b), b);;
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
